Set numbering options

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,14 +16,22 @@ set -g prefix C-s
 # set to vi mode
 set-window-option -g mode-keys vi
 
-# set to the left the windows
-set status-justify left
 
 # set a highlight for the prefix key
 set -g @tmux_power_prefix_highlight_pos 'R'
+
+# start tmux at 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# renumber windows
+set-option -g renumber-windows on
 
 #restart config
 bind r source-file $HOME/.config/tmux/tmux.conf \; display-message "Config reloaded..."
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "$HOME/.config/tmux/plugins/tpm/tpm"
+
+set -g status-justify left
+
