--- a/tmux.conf
+++ b/tmux.conf
@@ -3,11 +3,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'erikw/tmux-powerline'
-set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-#theme settings
-set -g @tmux_power_theme 'everforest'
 
 # change defauly prefix
 unbind C-b
@@ -15,10 +11,6 @@ set -g prefix C-s
 
 # set to vi mode
 set-window-option -g mode-keys vi
-
-
-# set a highlight for the prefix key
-set -g @tmux_power_prefix_highlight_pos 'R'
 
 # start tmux at 1
 set -g base-index 1
@@ -33,5 +25,5 @@ bind r source-file $HOME/.config/tmux/tmux.conf \; display-message "Config reloa
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "$HOME/.config/tmux/plugins/tpm/tpm"
 
-set -g status-justify left
+run "$HOME/.config/tmux/theme.tmux"
 
