Set to open in the same path new window

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,11 @@ set-window-option -g mode-keys vi
 set -g base-index 1
 setw -g pane-base-index 1
 
+# open new windows on the same path as the current
+bind  c  new-window      -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+
 # renumber windows
 set-option -g renumber-windows on
 
