--- a/tmux.conf
+++ b/tmux.conf
@@ -5,12 +5,15 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'erikw/tmux-powerline'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-# change defauly prefix
+# change default prefix
 unbind C-b
 set -g prefix C-s
 
 # set to vi mode
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send -X copy-selection      # Yank selection in copy mode.
 
 # start tmux at 1
 set -g base-index 1
