--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in co
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
 bind-key -T copy-mode-vi 'y' send -X copy-selection      # Yank selection in copy mode.
 
+#Disable confirmation to close window 
+bind-key x kill-pane
+
 # start tmux at 1
 set -g base-index 1
 setw -g pane-base-index 1
