--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # change default prefix
 unbind C-b
 set -g prefix C-s
+set -g prefix '`'
 
 # set to vi mode
 set-window-option -g mode-keys vi
@@ -23,7 +24,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # open new windows on the same path as the current
-bind  c  new-window      -c "#{pane_current_path}"
+bind  `  new-window -c "#{pane_current_path}"
 bind  %  split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 
