Change the split window keybind

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,8 +25,8 @@ setw -g pane-base-index 1
 
 # open new windows on the same path as the current
 bind  `  new-window -c "#{pane_current_path}"
-bind  %  split-window -h -c "#{pane_current_path}"
-bind '"' split-window -v -c "#{pane_current_path}"
+bind  /  split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # renumber windows
 set-option -g renumber-windows on
