--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'erikw/tmux-powerline'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 
 # change default prefix
 unbind C-b
@@ -38,4 +39,6 @@ bind r source-file $HOME/.config/tmux/tmux.conf \; display-message "Config reloa
 run "$HOME/.config/tmux/plugins/tpm/tpm"
 
 run "$HOME/.config/tmux/theme.tmux"
+
+set -g status-right '#(gitmux -cfg $HOME/.gitmux.conf "#{pane_current_path}")'
 
